// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering with FaaC should match snapshot 1`] = `
<Component
  a={3}
  b={4}
>
  <Memoise
    args={
      Array [
        3,
        4,
      ]
    }
    component={null}
    compute={[Function]}
    render={null}
  >
    <div>
      12
    </div>
  </Memoise>
</Component>
`;

exports[`rendering with component should match snapshot 1`] = `
<Component
  a={3}
  b={4}
>
  <Memoise
    args={
      Array [
        3,
        4,
      ]
    }
    component={[Function]}
    compute={[Function]}
    render={null}
  >
    <ChildComponent
      computedValue={12}
    >
      <div>
        12
      </div>
    </ChildComponent>
  </Memoise>
</Component>
`;

exports[`rendering with render-prop should match snapshot 1`] = `
<Component
  a={3}
  b={4}
>
  <Memoise
    args={
      Array [
        3,
        4,
      ]
    }
    component={null}
    compute={[Function]}
    render={[Function]}
  >
    <div>
      12
    </div>
  </Memoise>
</Component>
`;
